syntax = "proto3";
package freemasonry.chat.v1;

import "google/api/annotations.proto";
import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";

option go_package = "freemasonry.cc/blockchain/x/chat/types";
option (gogoproto.marshaler_all) = true;
option (gogoproto.unmarshaler_all) = true;
option (gogoproto.sizer_all) = true;

// GenesisState defines the module's genesis state.
message GenesisState {
  // module parameters
  Params params = 1 [ (gogoproto.nullable) = false ];
}

// chat
message Params {

  
  uint64 maxPhoneNumber = 1;

  //att
  cosmos.base.v1beta1.Coin destroyPhoneNumberCoin = 2 [ (gogoproto.nullable) = false ];

  
  cosmos.base.v1beta1.Coin chatFee = 6 [ (gogoproto.nullable) = false ];
}
